--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<!doctype html>
+
+<!DOCTYPE html>
 <html lang="pt-AO">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
       rel="icon"
       type="image/svg+xml"
@@ -10,51 +11,33 @@
     />
     <title>CGCF - Comité de Gestão Coordenada de Fronteiras</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>
-      body {
-        font-family: "Public Sans", sans-serif;
-      }
-      .bg-minfin-blue {
-        background-color: #003366;
-      }
-      .text-minfin-blue {
-        color: #003366;
-      }
-      .bg-minfin-gold {
-        background-color: #c5a059;
-      }
-      .border-minfin-gold {
-        border-color: #c5a059;
-      }
-      .hover-gold:hover {
-        color: #c5a059;
-      }
-      ::selection {
-        background-color: #003366;
-        color: white;
-      }
+        body { font-family: 'Public Sans', sans-serif; }
+        .bg-minfin-blue { background-color: #003366; }
+        .text-minfin-blue { color: #003366; }
+        .bg-minfin-gold { background-color: #C5A059; }
+        .border-minfin-gold { border-color: #C5A059; }
+        .hover-gold:hover { color: #C5A059; }
+        ::selection { background-color: #003366; color: white; }
     </style>
-    <script type="importmap">
-      {
-        "imports": {
-          "react/": "https://esm.sh/react@^19.2.3/",
-          "react": "https://esm.sh/react@^19.2.3",
-          "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-          "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
-          "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
-          "recharts": "https://esm.sh/recharts@^3.6.0",
-          "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
-        }
-      }
-    </script>
-    <link rel="stylesheet" href="/index.css" />
-  </head>
-  <body class="bg-slate-50 text-[#1A1A1A]">
+<script type="importmap">
+{
+  "imports": {
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.12.0",
+    "recharts": "https://esm.sh/recharts@^3.6.0",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
+  }
+}
+</script>
+<link rel="stylesheet" href="/index.css">
+</head>
+<body class="bg-slate-50 text-[#1A1A1A]">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
-  </body>
+<script type="module" src="/index.tsx"></script>
+</body>
 </html>
